# ants-umbrella

./: .gitignore  B_안티그래비티연동_가이드.md  PROGRESS.md  PROGRESS_A.md  PROGRESS_B.md  PROGRESS_FE.md  ROADMAP.md  ROADMAP_B.md  TEAM_ROLE_GUIDE.md  colab_pipeline.ipynb  data_analysis_definition.md  전략기획서_PRD__v2.md  전략기획서_PRD__v2_수정.md
.agents/: AGENTS.md
.github/workflows/: daily_batch.yml
backend/: generate_labels.py  main.py  news.py  pyproject.toml  requirements.txt  validate_price_data.py
backend/app/: db.py  schemas.py  utils.py
backend/data_sources/: collect_dart.py
backend/models/: classfier_head.pkl
backend/scripts/: add_sector.py  balance_training_data.py  collect_dart.py  collect_macro.py  collect_news.py  collect_price.py  compare_features.py  download_corp_codes.py  evnet_study.py  generate_dummy_data.py  generate_labels.py  join_features.py  preprocess_bigkinds.py  process_news_features.py  run_experiments.py  run_pipeline.py  save_risk_scores.py  scheduler.py  slack_notifier.py  test_kis_api.py  train_xgboost.py  validate_incoming_data.py  verify2.py  verify_news_contribution.py
backend/scripts/DL/: B_Day1_Colab_뉴스분류.ipynb  B_Day2_Colab_Materiality적용.ipynb
data/: corp_code_map.csv  dart.ipynb  event_study_stats.csv  materiality_analysis.ipynb  mock_db_esg_events.json  portfolio.json  전략기획서_PRD__v2_수정.md
data/reference/: materiality_map.csv  투자성향조사.md
frontend/: eslint.config.mjs  package-lock.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/alerts/: page.js
frontend/src/app/components/: AntPet.js  AssetChart.js  (+6 more)
(+19 files in other folders)
