[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "haneebunny",email = "re____@naver.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pandas>=2.2.0",
    "numpy<2.5.0",
    "requests>=2.31.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
