[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "haneebunny",email = "re____@naver.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pymongo>=4.7.0",
    "pandas>=2.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "numpy<2.5.0",
    "publicdatareader (>=1.1.1.post2,<2.0.0)",
    "finance-datareader (>=0.9.202,<0.10.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
